# Build arguments go here. Examples:
#   is_component_build = true
#   is_debug = false
# See "gn args <out_dir> --list" for available build arguments.

# From https://sites.google.com/a/chromium.org/dev/developers/how-tos/android-build-instructions
target_os = "android"
target_cpu = "arm"  # (default)
is_debug = true  # (default)

# Other args you may want to set:
is_component_build = true
symbol_level = 1  # Faster build with fewer symbols. -g1 rather than -g2

#_
disable_incremental_isolated_processes=true  # for install_chrome_public_apk_incremental

